# emulator-hub

./: .gitignore  Cargo.toml  Makefile  README.md  foo.cpp  package-lock.json
clientApp/nodeApp/: app.ts  package-lock.json  package.json
clientApp/webApp/: index.html  index.js  tsconfig.json
clientApp/webApp/c-emulator/: shibe.wasm
clientApp/webApp/src/: context.ts  cppPulsatingEmulatorContext.js  cppPulsatingEmulatorContext.ts  index.js  index.ts  rustPulsatingEmulatorContext.js  rustPulsatingEmulatorContext.ts  simpleNesEmulatorContext.js  simpleNesEmulatorContext.ts
clientApp/webApp/src/emulators/cpp-pulsating/: emulator.js  emulator.wasm
clientApp/webApp/src/emulators/simple-nes/: emulator.js  emulator.wasm
emulators/SimpleNES/: context.cpp
emulators/SimpleNES/include/: Controller.h  Emulator.h
emulators/SimpleNES/src/: Controller.cpp  Emulator.cpp
emulators/cpp-pulsating/: pulsatingEmulator.cpp
emulators/rust-pulsating/: Cargo.toml
emulators/rust-pulsating/src/: core.rs
emulators/rust-pulsating/src/emulators/: mod.rs  pulsating_emulator.rs
pkg-c/: shibe.js
src/: lib.rs
src/core/: emulator.rs  pixel.rs  screen.rs
