[package]
name = "emulator-hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
wasm-bindgen = "0.2.81"

[dev-dependencies]
wasm-bindgen-test = "0.3.31"
